--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1052,10 +1052,11 @@ $maxWidth: 1440;
 	.time-group {
 		&__field {
 			margin: 0 auto;
+			width: 100%;
 		}
 
-		&__label {
-			margin: 0 auto;
-		}
+		// &__label {
+		// 	margin: 0 auto;
+		// }
 	}
 }
