--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,19 +41,6 @@ $maxWidth: 1440;
 	flex-direction: column;
 	font-family: 'Montserrat Alternates', sans-serif;
 }
-.simplebar-scrollbar {
-	background-color: $grey;
-	border-radius: 0 8px 8px 0;
-	&::before {
-		background-color: $grey;
-	}
-}
-
-.simplebar-track {
-	width: 8px !important;
-	background-color: $green_dark;
-	border-radius: 0 8px 8px 0;
-}
 .main {
 	flex: 1 1 auto;
 	color: $text;
@@ -864,9 +851,16 @@ $maxWidth: 1440;
 		border-radius: 8px;
 		overflow: hidden;
 		order: 1;
-		scrollbar-width: none;
+
 		&::-webkit-scrollbar {
-			display: none;
+			width: 8px;
+			background-color: $grey;
+			border-radius: 0 8px 8px 0;
+		}
+
+		&::-webkit-scrollbar-thumb {
+			background-color: $green_dark;
+			border-radius: 0 8px 8px 0;
 		}
 
 		&.active {
