change readme file

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,6 +34,9 @@ $maxWidth: 1440;
   }
 }
 
+body {
+  cursor: none !important;
+}
 .wrapper {
   min-height: 100%;
   overflow: hidden;
@@ -155,7 +158,6 @@ $maxWidth: 1440;
     background-size: 400%;
     border-radius: 20px;
     color: $white;
-    cursor: pointer;
     border: none;
     height: 65px;
     width: 100%;
@@ -731,7 +733,7 @@ $maxWidth: 1440;
     margin-right: 3px;
     border-radius: 100%;
     border: 2px solid $yellow;
-    cursor: pointer;
+    // cursor: pointer;
     transition: all 0.5s ease;
     &:hover {
       background-color: $yellow;
@@ -885,7 +887,7 @@ $maxWidth: 1440;
   &__option,
   &__selected {
     padding: 12px 24px;
-    cursor: pointer;
+    // cursor: pointer;
   }
 
   &__option {
@@ -900,7 +902,7 @@ $maxWidth: 1440;
   }
 
   &__label {
-    cursor: pointer;
+    // cursor: pointer;
   }
 
   &__selected {
@@ -1105,4 +1107,26 @@ $maxWidth: 1440;
     background-color: $yellow;
     color: $white;
   }
+}
+
+/* Начальные стили для элемента, который будет следовать за курсором, в нашем случае небольшой кружок */
+.follow-cursor {
+  display: block;
+  width: 24px;
+  height: 24px;
+  border: 1px solid #0d6efd;
+  border-radius: 50%;
+  transform: translateY(-50%) translateX(-50%); /* центрируем кружок */
+  position: absolute; /* задаём абсолютное позиционирование, чтобы элемент не влиял на остальные элементы и его можно было бы позиционировать следом за курсором */
+  z-index: 999; /* чтобы элемент был над остальными элементами */
+  pointer-events: none; /* чтобы сквозь элемент можно было взаимодействовать с элементами, находящимися под ним */
+  transition: width 0.64s, height 0.64s, border-radius 0.64s, background 0.64s;
+}
+
+/* Активный класс для кружка при наведении на ссылку */
+.follow-cursor_active {
+  height: 128px;
+  width: 128px;
+  border-width: 2px;
+  background: rgba(13, 110, 253, 0.32);
 }
